fixed bug where u couldnt type in input on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,4 @@ body {
   background-color: rgb(68, 68, 68)
 }
 
-*{
-  user-select: none;
-}
+
