--- a/src/styles/text.css
+++ b/src/styles/text.css
@@ -2,4 +2,5 @@
     display: inline-block;
     font-size: 14px;
     z-index: 5;
+    user-select: none;
 }
